<resources>
    <string name="app_name">Database Project</string>

    <string name="createTitle">Create user</string>
    <string name="createIdInput">User ID</string>
    <string name="createNameInput">Full name</string>
    <string name="createUserButton">Create</string>
    <string name="createTakenId">The ID is already in use</string>
    <string name="createPost">Post</string>
    <string name="postHint">Message to be posted</string>
    <string name="loading">Loading</string>
    <string name="placeholderText">Please input your message here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uploadImage">Upload Image</string>
    <string name="ExpandButton">Expand post</string>
    <string name="MinimizeButton">Minimize post</string>
</resources>