<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createTitle"
        />
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/createIdInput" />

            <EditText
                android:id="@+id/userIdInput"
                android:layout_width="120dp"
                android:inputType="text" />

            <TextView
                android:text="@string/createNameInput" />

            <EditText
                android:id="@+id/userNameInput"
                android:layout_width="120dp"
                android:inputType="text" />


        </GridLayout>

        <TextView
            android:id="@+id/userIdInvalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createTakenId"
            android:visibility="invisible"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tryInsertUser"
            android:text="@string/createUserButton" />
    </LinearLayout>
</RelativeLayout>