<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_horizontal"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:id="@+id/userTextFragment"
            >


            <EditText
                android:id="@+id/userTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholderText"
                />
            <ImageView
                android:id="@+id/IVPreviewImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/BSelectImage"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="invisible"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploadImage"
                android:id="@+id/inputImage"
                android:visibility="invisible"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createPost"
                android:id="@+id/inputPost"
            />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:id="@+id/inputCancel"
                />
        </LinearLayout>

</FrameLayout>
